# cgpp

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  TODO  TODO.md
includes/: cgpp
includes/Concept/: Concept.hpp  Includes.hxx
includes/ConceptualGraph/: .ConceptGraph.hpp.swp  ConceptualGraph.cpp  ConceptualGraph.hpp  ConceptualGraphEXTRAS.cpp  ConceptualGraphJSON.cpp  Includes.hxx  README
includes/Edge/: Edge.hpp  Includes.hxx
includes/Node/: Includes.hxx  Node.hpp
includes/Proto/: README  prototype.json
includes/Relation/: Includes.hxx  Relation.hpp
includes/Token/: Includes.hxx  Token.hpp
includes/Utilities/: Utilities.cpp  Utilities.hpp
src/: cgpp
src/Concept/: Concept.hpp
src/ConceptualGraph/: ConceptualGraph.cpp  ConceptualGraph.hpp  Includes.hxx
src/Edge/: Edge.hpp  Includes.hxx
src/Node/: Node.hpp
src/Proto/: README.md  prototype.json
src/Relation/: Relation.hpp
src/Token/: Includes.hxx  Token.hpp
src/Utilities/: Includes.hxx  Utilities.cpp  Utilities.hpp
tests/: class_test.cpp  comparison.cpp  construct.cpp  deserialise.cpp  extras.cpp  json.cpp  json.hpp  json2.hpp  unit_tests.cpp  utils.cpp
